Rewrote Services and controllers